# swc-plugin-test

./: .swcrc  Cargo.toml  README.md  package.json
fixture/smoke_test/: config.json  input.js  output.js
src/: lib.rs  test.rs
